--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -1,14 +1,14 @@
 -#  This file is app/views/movies/index.html.haml
 %h1 All Movies
 
-// // = form_tag movies_path, :method => :get, id: 'ratings_form' do
-// //   Include:
-// //   - @all_ratings.each do |rating|
-// //   = rating
-// //   = check_box_tag "ratings[#{rating}]", 1, @ratings.include?(rating), id: "ratings_#{rating}"
-//   = submit_tag 'Refresh', {id: 'ratings_submit'}
-
-
+= form_tag movies_path, id: "ratings_form", :method => :get do
+  Include:
+  - @all_ratings.each do |rating|
+    = rating
+    - is_checked = (!@ratings.nil? && @ratings.include?(rating))
+    = check_box_tag "ratings[#{rating}]", is_checked, is_checked, {:id => "ratings_#{rating}"}
+  = submit_tag 'Refresh', id: "ratings_submit" 
+  
 %table#movies
   %thead
     %tr
